@@ -6,19 +6,23 @@ AC_DEFUN([AX_PEBS_SAMPLING],
 
 	AC_ARG_ENABLE(pebs-sampling,
 		AC_HELP_STRING(
-			[--enable-pebs-sampling],
-			[Allow PEBS sampling on Intel64 processors (experimental, disabled by default)]
+			[--disable-pebs-sampling],
+			[Disable PEBS sampling (enabled by default)]
 		),
 		[enable_pebs_sampling="${enableval}"],
-		[enable_pebs_sampling="not_set"]
+		[enable_pebs_sampling="yes"]
 	)
 
 	if test "${enable_pebs_sampling}" = "yes" ; then
 		if test "${target_cpu}" != "amd64" -a "${target_cpu}" != "x86_64" ; then
-			AC_MSG_ERROR([PEBS sampling is only available on Intel64 processors])
+			AC_MSG_WARN([PEBS sampling is only available on Intel64 processors])
+		        AC_DEFINE([ENABLE_PEBS_SAMPLING], 0, [Define if PEBS sampling must be used])
+                        enable_pebs_sampling="no"
 		fi
 		if test "${OperatingSystem}" != "linux" ; then
-			AC_MSG_ERROR([PEBS sampling is only available on Linux systems])
+			AC_MSG_WARN([PEBS sampling is only available on Linux systems])
+		        AC_DEFINE([ENABLE_PEBS_SAMPLING], 0, [Define if PEBS sampling must be used])
+                        enable_pebs_sampling="no"
 		fi
 		AC_DEFINE([ENABLE_PEBS_SAMPLING], 1, [Define if PEBS sampling must be used])
 	fi
